Fixed a better spacing for facebook app..

--- a/com.getshop.client/apps/RoughTheme/skin/RoughTheme.css
+++ b/com.getshop.client/apps/RoughTheme/skin/RoughTheme.css
@@ -69,7 +69,7 @@ body {
 }
 
 .Facebook .message {
-    padding-left: 20px;
+    padding-left: 160px;
 }
 
 .Facebook .newsentry {
